# paste-py

./: .gitignore  LICENSE  README.md  main.py  setup.cfg
.github/workflows/: codeql-analysis.yml
src/pastegram/: __init__.py  classes.py  constants.py  errors.py  functions.py  utils.py
