[metadata]
name = pastegram
version = 1.0.1
author = Pato05
author_email = pato05mc@gmail.com
description = A set of simple functions to upload and fetch pastes on paste.uploadgram.me
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Uploadgram/paste-py
project_urls =
    Bug Tracker = https://github.com/Uploadgram/paste-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src/
packages = find:
python_requires = >=3.0
install_requires =
    pycryptodomex == 3.10.1
    requests == 2.26.0

[options.packages.find]
where = src/